--- a/client/html_Game/index.html
+++ b/client/html_Game/index.html
@@ -13,7 +13,7 @@
 
             <div class="nameofuser">
                 <h2>Tous D'abors entrer votre nom</h2>
-                <input type="text" id="input_nameofuser">
+                <input type="text" id="input_nameofuser" onchange="AFF_join_recherchParty_creatParty">
             </div>
 
             <div class="join">
