--- a/client/ERROR/ERROR_002/index.html
+++ b/client/ERROR/ERROR_002/index.html
@@ -14,7 +14,7 @@
         </style>
 
         <h3>ERREUR 002</h3>
-        <p>Commme l'admin a quitter le jeu s'arrette</p>
+        <p>Tous les joueurs on quitter</p>
         <button type="button" onclick="window.location = window.location.origin">Revenir a l'accueil</button>
     </body>
 </html>
