--- a/client/html_Game/index.html
+++ b/client/html_Game/index.html
@@ -26,7 +26,7 @@
 
                 <div>
                     <h2>Ou rechercher parmie la liste des partie:</h2>
-                    <span id="little_p">Clique sur le nom de la partie désirée</span>
+                    <p id="little_p">Clique sur le nom de la partie désirée</p>
                     <span id="list_allParty">
 
                     </span>
@@ -72,6 +72,7 @@
 
             <div>
                 <p id="#little_p">Cliquer sur une des lettres pour choisire votre lettre</p>
+                <p id="aff_whoChoose"></p>
                 <span id="span_alphabet_AFF">
 
                 </span>
