--- a/client/html_Game/index.html
+++ b/client/html_Game/index.html
@@ -78,14 +78,15 @@
                 </span>
             </div>
 
-            <div>
-                <span id="span_mistake_AFF">
+            <div id="div_mistake_AFF">
 
-                </span>
+            </div>
+
+            <div>
                 <p>Vous avez trouver le mot ?</p>
                 <input type="text" id="input_wordFind" onchange="SuggestWord(this.value)">
                 <p id="ERROR_004"></p>
-                <p id="p_endOutput"></p>
+                <p id="p_endOutput" style=""></p>
                 <button type="button" disabled id="bnt_nextParty" onclick="NextParty()">Nouvelle Partie</button>
             </div>
 
